fixed text alignment

--- a/Teams/css/ourteam.css
+++ b/Teams/css/ourteam.css
@@ -192,7 +192,7 @@ html{
 }
 
 .fac-info{
-  text-align: center;
+  text-align: justify;
   font-size: 2.5em;
 }
 
